--- a/source/index.html
+++ b/source/index.html
@@ -4,9 +4,35 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
-  <body>
+  <body class="page__body">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+    <header class="main-header">
+      <div class="main-header__wrapper">
+        <a href="index.html" class="main-header__trademark primary-trademark">
+          <img src="" width="" height="" alt="Основной фирменный знак 'Кэт энерджи'.">
+        </a>
+        <a href="index.html" class="main-header__trademark secondary-trademark secondary-trademark--active">
+          <img src="/source/img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
+        </a>
+        <a href="index.html" class="main-header__logo-image logo">
+          <img src="/source/img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
   </body>
 </html>
