--- a/source/index.html
+++ b/source/index.html
@@ -9,13 +9,13 @@
     <header class="main-header">
       <div class="main-header__wrapper">
         <a href="index.html" class="main-header__trademark primary-trademark">
-          <img src="" width="" height="" alt="Основной фирменный знак 'Кэт энерджи'.">
+          <img src="source/img/primary-trademark.svg" width="44" height="44" alt="Основной фирменный знак 'Кэт энерджи'.">
         </a>
         <a href="index.html" class="main-header__trademark secondary-trademark secondary-trademark--active">
-          <img src="/source/img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
+          <img src="source/img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
         </a>
         <a href="index.html" class="main-header__logo-image logo">
-          <img src="/source/img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
+          <img src="source/img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
         </a>
         <nav class="main-nav">
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
@@ -40,7 +40,7 @@
       <section class="main-container__section promo promo--theme-phone">
         <h2 class="promo__title heading">Функциональное питание для котов</h2>
         <p class="promo__description">Занялся собой? Займись котом!</p>
-        <img class="promo__image" src="/source/img/promo-image.png" width="280" height="270" alt="Изображение корма фирмы 'Кэт энерджи' со вкусом курицы.">
+        <img class="promo__image" src="source/img/promo-image.png" width="280" height="270" alt="Изображение корма фирмы 'Кэт энерджи' со вкусом курицы.">
         <a class="promo__button button" href="form.html">Подобрать программу</a>
       </section>
 
@@ -90,8 +90,8 @@
         <span class="example-cat__caption costs-caption">Затраты на питание: 15 000 руб.</span>
         <figure class="example-cat__image-wrapper slider">
           <div class="slider__toggle"></div>
-          <img class="slider__image" src="/source/img/cat-before.png" width="280" height="256" alt="Кот Борис до употребления корма 'Кэт энерджи'.">
-          <img class="slider__image" src="/source/img/cat-after.png" width="280" height="256" alt="Кот Борис после употребления корма 'Кэт энерджи'.">
+          <img class="slider__image" src="source/img/cat-before.png" width="280" height="256" alt="Кот Борис до употребления корма 'Кэт энерджи'.">
+          <img class="slider__image" src="source/img/cat-after.png" width="280" height="256" alt="Кот Борис после употребления корма 'Кэт энерджи'.">
           <figcaption class="visually-hidden">Кот Борис до и после употребления корма "Кэт Энерджи".</figcaption>
         </figure>
       </section>
@@ -100,9 +100,46 @@
         <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
         <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         <div class="address__map map">
-          <img class="map__image" src="/source/img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
+          <img class="map__image" src="source/img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
         </div>
       </section>
     </main>
+
+    <footer class="main-footer">
+      <div class="main-footer__wrapper">
+
+        <section class="main-footer__contacts contacts">
+          <h2 class="visually-hidden">Контакты.</h2>
+          <a href="index.html" class="main-footer__logo-image logo">
+            <img src="source/img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
+          </a>
+        </section>
+
+        <section class="main-footer__social social">
+          <h2 class="visually-hidden">Социальные сети.</h2>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте.</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Ютубе.</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме.</a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="main-footer__copyright copyright">
+          <h2 class="visually-hidden">Сайт разработчика.</h2>
+          <div class="copyright__wrapper">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <img class="copyright__image" src="source/img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy.">
+            </a>
+          </div>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
