--- a/source/index.html
+++ b/source/index.html
@@ -37,26 +37,26 @@
     <main class="main-container">
       <h1 class="visually-hidden">Магазин кормов для котов "Кэт энерджи".</h1>
 
-      <section class="main-container__section promo promo--theme-phone">
+      <section class="main-container__wrapper promo promo--theme-phone">
         <h2 class="promo__title heading">Функциональное питание для котов</h2>
         <p class="promo__description">Занялся собой? Займись котом!</p>
         <img class="promo__image" src="source/img/promo-image.png" width="280" height="270" alt="Изображение корма фирмы 'Кэт энерджи' со вкусом курицы.">
         <a class="promo__button button" href="form.html">Подобрать программу</a>
       </section>
 
-      <section class="main-container__section feed-serie feed-serie--slim">
+      <section class="main-container__wrapper feed-serie feed-serie--slim">
         <h2 class="feed-serie__title heading">Похудение</h2>
         <p class="feed-serie__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
         <a href="catalog.html" class="feed-serie__link">Каталог Slim</a>
       </section>
 
-      <section class="main-container__section feed-serie feed-serie--pro">
+      <section class="main-container__wrapper feed-serie feed-serie--pro">
         <h2 class="feed-serie__title heading">Набор массы</h2>
         <p class="feed-serie__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
         <a href="catalog.html" class="feed-serie__link">Каталог Pro</a>
       </section>
 
-      <section class="main-container__section guide">
+      <section class="main-container__wrapper guide">
         <h2 class="guide__title heading">Как это работает</h2>
         <ul class="guide__list step-list step-list--theme-phone">
           <li class="step-list__item">
@@ -74,7 +74,7 @@
         </ul>
       </section>
 
-      <section class="main-container__section example-cat">
+      <section class="main-container__wrapper example-cat">
         <h2 class="example-cat__title heading">Живой пример</h2>
         <p class="example-cat__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
         <dl class="example-cat__description-list">
@@ -96,7 +96,7 @@
         </figure>
       </section>
 
-      <section class="main-container__section address">
+      <section class="main-container__wrapper address">
         <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
         <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         <div class="address__map map">
