--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,10 +20,10 @@
         <nav class="main-nav">
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
+            <li class="site-list__item">
               <a href="index.html">Главная</a>
             </li>
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--active">
               <a href="catalog.html">Каталог продукции</a>
             </li>
             <li class="site-list__item">
@@ -35,7 +35,202 @@
     </header>
 
     <main class="main-container">
+      <h1 class="main-container__title heading">Каталог продукции</h1>
 
+      <section class="main-container__wrapper main-products">
+        <h2 class="visually-hidden">Основные товары.</h2>
+
+        <ul class="main-products__product-list product-list product-list--primary">
+
+          <li class="product-list__item product-card product-card--primary">
+            <img class="product-card__image" src="source/img/catalog-1.jpg" width="68" height="86" alt="">
+            <h3 class="product-card__title heading">Cat Energy PRO 500 г</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">Масса</dt>
+              <dd class="product-card__description">500 г</dd>
+
+              <dt class="product-card__termin">Вкус</dt>
+              <dd class="product-card__description">Курица</dd>
+
+              <dt class="product-card__termin">Цена</dt>
+              <dd class="product-card__description">700 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--primary">
+            <img class="product-card__image" src="source/img/catalog-2.jpg" width="84" height="100" alt="">
+            <h3 class="product-card__title heading">Cat Energy PRO 1000 г</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">Масса</dt>
+              <dd class="product-card__description">1000 г</dd>
+
+              <dt class="product-card__termin">Вкус</dt>
+              <dd class="product-card__description">Курица</dd>
+
+              <dt class="product-card__termin">Цена</dt>
+              <dd class="product-card__description">1000 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--primary">
+            <img class="product-card__image" src="source/img/catalog-3.jpg" width="68" height="78" alt="">
+            <h3 class="product-card__title heading">Cat Energy PRO 500 г</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">Масса</dt>
+              <dd class="product-card__description">500 г</dd>
+
+              <dt class="product-card__termin">Вкус</dt>
+              <dd class="product-card__description">Рыба</dd>
+
+              <dt class="product-card__termin">Цена</dt>
+              <dd class="product-card__description">700 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--primary">
+            <img class="product-card__image" src="source/img/catalog-4.jpg" width="84" height="100" alt="">
+            <h3 class="product-card__title heading">Cat Energy PRO 1000 г</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">Масса</dt>
+              <dd class="product-card__description">1000 г</dd>
+
+              <dt class="product-card__termin">Вкус</dt>
+              <dd class="product-card__description">Рыба</dd>
+
+              <dt class="product-card__termin">Цена</dt>
+              <dd class="product-card__description">1000 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--primary">
+            <img class="product-card__image" src="source/img/catalog-4.jpg" width="68" height="86" alt="">
+            <h3 class="product-card__title heading">Cat Energy PRO 1000 г</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">Масса</dt>
+              <dd class="product-card__description">1000 г</dd>
+
+              <dt class="product-card__termin">Вкус</dt>
+              <dd class="product-card__description">Рыба</dd>
+
+              <dt class="product-card__termin">Цена</dt>
+              <dd class="product-card__description">1000 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--primary">
+            <img class="product-card__image" src="source/img/catalog-5.jpg" width="68" height="78" alt="">
+            <h3 class="product-card__title heading">Cat Energy SLIM 500 г</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">Масса</dt>
+              <dd class="product-card__description">500 г</dd>
+
+              <dt class="product-card__termin">Вкус</dt>
+              <dd class="product-card__description">Гречка</dd>
+
+              <dt class="product-card__termin">Цена</dt>
+              <dd class="product-card__description">400 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--primary">
+            <img class="product-card__image" src="source/img/catalog-6.jpg" width="84" height="100" alt="">
+            <h3 class="product-card__title heading">Cat Energy SLIM 1000 г</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">Масса</dt>
+              <dd class="product-card__description">1000 г</dd>
+
+              <dt class="product-card__termin">Вкус</dt>
+              <dd class="product-card__description">Гречка</dd>
+
+              <dt class="product-card__termin">Цена</dt>
+              <dd class="product-card__description">700 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--primary">
+            <img class="product-card__image" src="source/img/catalog-7.jpg" width="72" height="84" alt="">
+            <h3 class="product-card__title heading">Cat Energy SLIM 500 г</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">Масса</dt>
+              <dd class="product-card__description">500 г</dd>
+
+              <dt class="product-card__termin">Вкус</dt>
+              <dd class="product-card__description">Рис</dd>
+
+              <dt class="product-card__termin">Цена</dt>
+              <dd class="product-card__description">500 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--primary product-card--more">
+            <h3 class="product-card__title heading">Показать еще 100500 товаров</h3>
+            <p class="product-card__description">На самом деле вкусов гораздо больше!</p>
+            <a class="product-card__link product-card__link--more button" href="#">Показать все</a>
+          </li>
+        </ul>
+
+      </section class="main-container__wrapper additional-products">
+        <h2 class="additional-products__title heading">Дополнительные товары</h2>
+
+        <ul class="additional-products__product-list product-list product-list--secondary">
+
+          <li class="product-list__item product-card product-card--secondary">
+            <h3 class="product-card__title heading">Сахарозаменитель</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">1 упакова (100 г)</dt>
+              <dd class="product-card__description">200 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--secondary">
+            <h3 class="product-card__title heading">Питьевая вода</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">5 литров</dt>
+              <dd class="product-card__description">50 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--secondary">
+            <h3 class="product-card__title heading">Молоко</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">1 литр</dt>
+              <dd class="product-card__description">100 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+
+          <li class="product-list__item product-card product-card--secondary">
+            <h3 class="product-card__title heading">Витамины</h3>
+            <dl class="product-card__product-details">
+              <dt class="product-card__termin">1 упаковка (30 г)</dt>
+              <dd class="product-card__description">300 &#8381</dd>
+            </dl>
+            <a class="product-card__link button" href="#">Заказать</a>
+          </li>
+        </ul>
+
+      <section class="main-container__wrapper special-offer">
+        <h2 class="visually-hidden">Специальное предложение.</h2>
+        <p class="special-offer__text">Закажите все и получите чехол для кота в подарок!</p>
+      </section>
+
+      <section class="main-container__wrapper address">
+        <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
+        <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <div class="address__map map">
+          <img class="map__image" src="source/img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
+        </div>
+      </section>
     </main>
 
     <footer class="main-footer">
