Сверстана страница 'Подбор программы'

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -176,8 +176,9 @@
             <a class="product-card__link product-card__link--more button" href="#">Показать все</a>
           </li>
         </ul>
+      </section>
 
-      </section class="main-container__wrapper additional-products">
+      <section class="main-container__wrapper additional-products">
         <h2 class="additional-products__title heading">Дополнительные товары</h2>
 
         <ul class="additional-products__product-list product-list product-list--secondary">
