--- a/source/catalog.html
+++ b/source/catalog.html
@@ -53,7 +53,7 @@
               <dd class="product-card__description">Курица</dd>
 
               <dt class="product-card__termin">Цена</dt>
-              <dd class="product-card__description">700 &#8381</dd>
+              <dd class="product-card__description">700 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -69,7 +69,7 @@
               <dd class="product-card__description">Курица</dd>
 
               <dt class="product-card__termin">Цена</dt>
-              <dd class="product-card__description">1000 &#8381</dd>
+              <dd class="product-card__description">1000 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -85,7 +85,7 @@
               <dd class="product-card__description">Рыба</dd>
 
               <dt class="product-card__termin">Цена</dt>
-              <dd class="product-card__description">700 &#8381</dd>
+              <dd class="product-card__description">700 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -101,7 +101,7 @@
               <dd class="product-card__description">Рыба</dd>
 
               <dt class="product-card__termin">Цена</dt>
-              <dd class="product-card__description">1000 &#8381</dd>
+              <dd class="product-card__description">1000 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -117,7 +117,7 @@
               <dd class="product-card__description">Рыба</dd>
 
               <dt class="product-card__termin">Цена</dt>
-              <dd class="product-card__description">1000 &#8381</dd>
+              <dd class="product-card__description">1000 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -133,7 +133,7 @@
               <dd class="product-card__description">Гречка</dd>
 
               <dt class="product-card__termin">Цена</dt>
-              <dd class="product-card__description">400 &#8381</dd>
+              <dd class="product-card__description">400 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -149,7 +149,7 @@
               <dd class="product-card__description">Гречка</dd>
 
               <dt class="product-card__termin">Цена</dt>
-              <dd class="product-card__description">700 &#8381</dd>
+              <dd class="product-card__description">700 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -165,7 +165,7 @@
               <dd class="product-card__description">Рис</dd>
 
               <dt class="product-card__termin">Цена</dt>
-              <dd class="product-card__description">500 &#8381</dd>
+              <dd class="product-card__description">500 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -187,7 +187,7 @@
             <h3 class="product-card__title heading">Сахарозаменитель</h3>
             <dl class="product-card__product-details">
               <dt class="product-card__termin">1 упакова (100 г)</dt>
-              <dd class="product-card__description">200 &#8381</dd>
+              <dd class="product-card__description">200 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -196,7 +196,7 @@
             <h3 class="product-card__title heading">Питьевая вода</h3>
             <dl class="product-card__product-details">
               <dt class="product-card__termin">5 литров</dt>
-              <dd class="product-card__description">50 &#8381</dd>
+              <dd class="product-card__description">50 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -205,7 +205,7 @@
             <h3 class="product-card__title heading">Молоко</h3>
             <dl class="product-card__product-details">
               <dt class="product-card__termin">1 литр</dt>
-              <dd class="product-card__description">100 &#8381</dd>
+              <dd class="product-card__description">100 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
@@ -214,11 +214,12 @@
             <h3 class="product-card__title heading">Витамины</h3>
             <dl class="product-card__product-details">
               <dt class="product-card__termin">1 упаковка (30 г)</dt>
-              <dd class="product-card__description">300 &#8381</dd>
+              <dd class="product-card__description">300 &#8381;</dd>
             </dl>
             <a class="product-card__link button" href="#">Заказать</a>
           </li>
         </ul>
+      </section>
 
       <section class="main-container__wrapper special-offer">
         <h2 class="visually-hidden">Специальное предложение.</h2>
