Исправлена ошибка на странице формы

--- a/source/form.html
+++ b/source/form.html
@@ -34,6 +34,7 @@
       </div>
     </header>
 
+    <main class="main-container">
       <h1 class="main-container__title heading">Подбор программы</h1>
 
       <form class="main-container__wrapper program-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -157,6 +158,7 @@
           <img class="map__image" src="source/img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
         </div>
       </section>
+    </main>
 
     <footer class="main-footer">
       <div class="main-footer__wrapper">
