Добавлены классы БЭМ ссылкам

--- a/source/index.html
+++ b/source/index.html
@@ -21,13 +21,13 @@
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a href="index.html">Главная</a>
+              <a class="site-list__link link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="catalog.html">Каталог продукции</a>
+              <a class="site-list__link link" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html">Подбор программы</a>
+              <a class="site-list__link link" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </nav>
@@ -47,13 +47,13 @@
       <section class="main-container__wrapper feed-serie feed-serie--slim">
         <h2 class="feed-serie__title heading">Похудение</h2>
         <p class="feed-serie__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a href="catalog.html" class="feed-serie__link">Каталог Slim</a>
+        <a class="feed-serie__link link link--has-icon" href="catalog.html" class="feed-serie__link">Каталог Slim</a>
       </section>
 
       <section class="main-container__wrapper feed-serie feed-serie--pro">
         <h2 class="feed-serie__title heading">Набор массы</h2>
         <p class="feed-serie__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-        <a href="catalog.html" class="feed-serie__link">Каталог Pro</a>
+        <a class="feed-serie__link link link--has-icon" href="catalog.html" class="feed-serie__link">Каталог Pro</a>
       </section>
 
       <section class="main-container__wrapper guide">
