--- a/source/form.html
+++ b/source/form.html
@@ -21,13 +21,13 @@
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="index.html">Главная</a>
+              <a class="site-list__link link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="catalog.html">Каталог продукции</a>
+              <a class="site-list__link link" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="site-list__item site-list__item--active">
-              <a href="form.html">Подбор программы</a>
+              <a class="site-list__link link" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </nav>
