Добавлены файлы блоков scss

--- a/source/form.html
+++ b/source/form.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
 
     <header class="main-header">
       <div class="container">
         <a href="index.html" class="main-header__trademark primary-trademark">
-          <img src="source/img/primary-trademark.svg" width="44" height="44" alt="Основной фирменный знак 'Кэт энерджи'.">
+          <img src="img/primary-trademark.svg" width="44" height="44" alt="Основной фирменный знак 'Кэт энерджи'.">
         </a>
         <a href="index.html" class="main-header__trademark secondary-trademark secondary-trademark--active">
-          <img src="source/img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
+          <img src="img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
         </a>
         <a href="index.html" class="main-header__logo-image logo">
-          <img src="source/img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
+          <img src="img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
         </a>
         <nav class="main-nav">
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
@@ -158,7 +159,7 @@
           <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
           <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           <div class="address__map map">
-            <img class="map__image" src="source/img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
+            <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
           </div>
         </div>
       </section>
@@ -170,7 +171,7 @@
         <section class="main-footer__contacts contacts">
           <h2 class="visually-hidden">Контакты.</h2>
           <a href="index.html" class="main-footer__logo-image logo">
-            <img src="source/img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
+            <img src="img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
           </a>
         </section>
 
@@ -194,7 +195,7 @@
           <div class="copyright__wrapper">
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <img class="copyright__image" src="source/img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy.">
+              <img class="copyright__image" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy.">
             </a>
           </div>
         </section>
