Добавлена базовая стилизация некоторых компонентов

--- a/source/form.html
+++ b/source/form.html
@@ -61,30 +61,30 @@
             </label>
           </fieldset>
 
-          <fieldset class="program-form__group program-form__group--radio">
+          <fieldset class="program-form__group">
             <legend class="visually-hidden">Программа питания.</legend>
-            <ul class="program-form__list program-form__list--radio">
-              <li class="program-form__radio-item">
-                <label class="program-form__label">
-                  <input class="program-form__radio-input visually-hidden" type="radio" name="feed-program" value="weight-loss">
-                  <span class="program-form__radio-mark"></span>
-                  <span class="program-form__item-text">Похудение</span>
+            <ul class="program-form__list radio">
+              <li class="radio__item">
+                <label class="radio__label">
+                  <input class="radio__input visually-hidden" type="radio" name="feed-program" value="weight-loss">
+                  <span class="radio__mark"></span>
+                  <span class="radio__text">Похудение</span>
                 </label>
               </li>
 
-              <li class="program-form__radio-item">
-                <label class="program-form__label">
-                  <input class="program-form__radio-input visually-hidden" type="radio" name="feed-program" value="weight-gain">
-                  <span class="program-form__radio-mark"></span>
-                  <span class="program-form__item-text">Набор массы</span>
+              <li class="radio__item">
+                <label class="radio__label">
+                  <input class="radio__input visually-hidden" type="radio" name="feed-program" value="weight-gain">
+                  <span class="radio__mark"></span>
+                  <span class="radio__text">Набор массы</span>
                 </label>
               </li>
 
-              <li class="program-form__radio-item">
-                <label class="program-form__label">
-                  <input class="program-form__radio-input visually-hidden" type="radio" name="feed-program" value="other">
-                  <span class="program-form__radio-mark"></span>
-                  <span class="program-form__item-text">Не знаю (Нужен ваш совет)</span>
+              <li class="radio__item">
+                <label class="radio__label">
+                  <input class="radio__input visually-hidden" type="radio" name="feed-program" value="other">
+                  <span class="radio__mark"></span>
+                  <span class="radio__text">Не знаю (Нужен ваш совет)</span>
                 </label>
               </li>
             </ul>
@@ -114,36 +114,36 @@
           <fieldset class="program-form__group">
             <legend class="program-form__group-title">Дополнительно</legend>
 
-            <ul class="program-form__list program-form__list--checkbox">
-              <li class="program-form__checkbox-item">
-                <label class="program-form__label">
-                  <input class="program-form__checkbox-input visually-hidden" type="checkbox" name="sugar-substitute">
-                  <span class="program-form__checkbox-mark"></span>
-                  <span class="program-form__item-text">Сахарозаменитель</span>
+            <ul class="program-form__list checkbox">
+              <li class="checkbox__item">
+                <label class="checkbox__label">
+                  <input class="checkbox__input visually-hidden" type="checkbox" name="sugar-substitute">
+                  <span class="checkbox__mark"></span>
+                  <span class="checkbox__text">Сахарозаменитель</span>
                 </label>
               </li>
 
-              <li class="program-form__checkbox-item">
-                <label class="program-form__label">
-                  <input class="program-form__checkbox-input visually-hidden" type="checkbox" name="water">
-                  <span class="program-form__checkbox-mark"></span>
-                  <span class="program-form__item-text">Питьевая вода</span>
+              <li class="checkbox__item">
+                <label class="checkbox__label">
+                  <input class="checkbox__input visually-hidden" type="checkbox" name="water">
+                  <span class="checkbox__mark"></span>
+                  <span class="checkbox__text">Питьевая вода</span>
                 </label>
               </li>
 
-              <li class="program-form__checkbox-item">
-                <label class="program-form__label">
-                  <input class="program-form__checkbox-input visually-hidden" type="checkbox" name="milk">
-                  <span class="program-form__checkbox-mark"></span>
-                  <span class="program-form__item-text">Молоко</span>
+              <li class="checkbox__item">
+                <label class="checkbox__label">
+                  <input class="checkbox__input visually-hidden" type="checkbox" name="milk">
+                  <span class="checkbox__mark"></span>
+                  <span class="checkbox__text">Молоко</span>
                 </label>
               </li>
 
-              <li class="program-form__checkbox-item">
-                <label class="program-form__label">
-                  <input class="program-form__checkbox-input visually-hidden" type="checkbox" name="vitamins">
-                  <span class="program-form__checkbox-mark"></span>
-                  <span class="program-form__item-text">Витамины</span>
+              <li class="checkbox__item">
+                <label class="checkbox__label">
+                  <input class="checkbox__input visually-hidden" type="checkbox" name="vitamins">
+                  <span class="checkbox__mark"></span>
+                  <span class="checkbox__text">Витамины</span>
                 </label>
               </li>
             </ul>
