--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
       <h1 class="visually-hidden">Магазин кормов для котов "Кэт энерджи".</h1>
 
       <section class="promo promo--theme-phone">
-        <div class="container">
+        <div class="promo__container container">
           <h2 class="promo__title heading">Функциональное питание для котов</h2>
           <p class="promo__description">Занялся собой? Займись котом!</p>
           <img class="promo__image" src="img/promo-image.png" width="280" height="270" alt="Изображение корма фирмы 'Кэт энерджи' со вкусом курицы.">
@@ -66,18 +66,18 @@
       <section class="main-container__wrapper guide">
         <div class="container">
           <h2 class="guide__title heading">Как это работает</h2>
-          <ul class="guide__list step-list step-list--theme-phone">
-            <li class="step-list__item">
-              <p class="step-list__step-text">Функциональное питание содержит только полезные питательные вещества.</p>
+          <ul class="guide__list guide__list--theme-phone">
+            <li class="guide__list-item">
+              <p class="guide__list-text">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
-            <li class="step-list__item">
-              <p class="step-list__step-text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            <li class="guide__list-item">
+              <p class="guide__list-text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
-            <li class="step-list__item">
-              <p class="step-list__step-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            <li class="guide__list-item">
+              <p class="guide__list-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
-            <li class="step-list__item">
-              <p class="step-list__step-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            <li class="guide__list-item">
+              <p class="guide__list-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             </li>
           </ul>
         </div>
@@ -89,12 +89,12 @@
           <p class="example-cat__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           <dl class="example-cat__description-list">
             <div class="example-cat__description-item">
-              <dt class="description-item__termin">Снижение веса</dt>
-              <dd class="description-item__text">5 кг</dd>
+              <dt class="example-cat__description-termin">Снижение веса</dt>
+              <dd class="example-cat__description-text">5 кг</dd>
             </div>
             <div class="example-cat__description-item">
-              <dt class="description-item__termin">Затрачено времени</dt>
-              <dd class="description-item__text">60 дней</dd>
+              <dt class="example-cat__description-termin">Затрачено времени</dt>
+              <dd class="example-cat__description-text">60 дней</dd>
             </div>
           </dl>
           <span class="example-cat__costs-caption">Затраты на питание: 15 000 руб.</span>
