Добавлены базовые стили компонентов страницы формы

--- a/source/form.html
+++ b/source/form.html
@@ -107,7 +107,7 @@
           <fieldset class="program-form__group">
             <legend class="program-form__group-title">Комментарий</legend>
             <label class="program-form__label">
-              <textarea name="commentary" placeholder="Расскажите обо всех повадках кота"></textarea>
+              <textarea class="program-form__textarea" name="commentary" placeholder="Расскажите обо всех повадках кота"></textarea>
             </label>
           </fieldset>
 
