Закончено добавление базовых стилей

--- a/source/form.html
+++ b/source/form.html
@@ -38,7 +38,7 @@
     <main class="main-container">
       <h1 class="main-container__title heading">Подбор программы</h1>
 
-      <form class="program-form" action="https://echo.htmlacademy.ru/" method="post">
+      <form class="program-form container" action="https://echo.htmlacademy.ru/" method="post">
         <div class="container">
           <p class="program-form__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
@@ -156,8 +156,10 @@
 
       <section class="address">
         <div class="container">
-          <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
-          <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <div class="address__wrapper address__wrapper--secondary">
+            <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
+            <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
           <div class="address__map map">
             <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
           </div>
