--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,7 @@
     <main class="main-container">
       <h1 class="visually-hidden">Магазин кормов для котов "Кэт энерджи".</h1>
 
-      <section class="promo promo--theme-phone">
+      <section class="main-container__promo promo promo--theme-phone">
         <div class="promo__container container">
           <h2 class="promo__title heading">Функциональное питание для котов</h2>
           <p class="promo__description">Занялся собой? Займись котом!</p>
@@ -47,7 +47,7 @@
         </div>
       </section>
 
-      <section class="main-container__wrapper feed-serie feed-serie--slim">
+      <section class="main-container__feed-serie feed-serie feed-serie--slim">
         <div class="container">
           <h2 class="feed-serie__title heading">Похудение</h2>
           <p class="feed-serie__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
@@ -55,7 +55,7 @@
         </div>
       </section>
 
-      <section class="main-container__wrapper feed-serie feed-serie--pro">
+      <section class="main-container__feed-serie feed-serie feed-serie--pro">
         <div class="container">
           <h2 class="feed-serie__title heading">Набор массы</h2>
           <p class="feed-serie__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
@@ -63,7 +63,7 @@
         </div>
       </section>
 
-      <section class="main-container__wrapper guide">
+      <section class="main-container__guide guide">
         <div class="container">
           <h2 class="guide__title heading">Как это работает</h2>
           <ul class="guide__list guide__list--theme-phone">
@@ -109,8 +109,10 @@
 
       <section class="main-container__wrapper address">
         <div class="container">
-          <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
-          <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <div class="address__wrapper">
+            <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
+            <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
           <div class="address__map map">
             <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
           </div>
