--- a/source/catalog.html
+++ b/source/catalog.html
@@ -109,22 +109,6 @@
             </li>
 
             <li class="product-list__item product-card product-card--primary">
-              <img class="product-card__image" src="img/catalog-4.jpg" width="68" height="86" alt="">
-              <h3 class="product-card__title heading">Cat Energy PRO 1000 г</h3>
-              <dl class="product-card__product-details">
-                <dt class="product-card__termin">Масса</dt>
-                <dd class="product-card__description">1000 г</dd>
-
-                <dt class="product-card__termin">Вкус</dt>
-                <dd class="product-card__description">Рыба</dd>
-
-                <dt class="product-card__termin">Цена</dt>
-                <dd class="product-card__description">1000 &#8381;</dd>
-              </dl>
-              <a class="product-card__link button" href="#">Заказать</a>
-            </li>
-
-            <li class="product-list__item product-card product-card--primary">
               <img class="product-card__image" src="img/catalog-5.jpg" width="68" height="78" alt="">
               <h3 class="product-card__title heading">Cat Energy SLIM 500 г</h3>
               <dl class="product-card__product-details">
@@ -183,7 +167,9 @@
 
       <section class="additional-products">
         <div class="container">
-          <h2 class="additional-products__title heading">Дополнительные товары</h2>
+          <div class="decor-line">
+            <h2 class="additional-products__title heading">Дополнительные товары</h2>
+          </div>
 
           <ul class="additional-products__product-list product-list product-list--secondary">
 
@@ -235,8 +221,10 @@
 
       <section class="address">
         <div class="container">
-          <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
-          <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <div class="address__wrapper address__wrapper--secondary">
+            <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
+            <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
           <div class="address__map map">
             <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
           </div>
