--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -217,9 +218,11 @@
       </div>
 
       <section class="address address--secondary">
-        <div class="address__wrapper container">
-          <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
-          <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <div class="container">
+          <div class="address__wrapper">
+            <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
+            <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
         </div>
         <div class="address__map map">
           <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
